[package]
name = "arceos-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
axlibc ={ path = "../../ulib/axlibc", features = ["alloc", "multitask"]}
axtask ={ path = "../../modules/axtask" }
axstd = { path = "../../ulib/axstd", features = ["alloc", "multitask", "paging", "irq", "sched_rr"], optional = true }
axconfig = { path = "../../modules/axconfig" }
axlog = { path = "../../modules/axlog" }
axalloc ={ path = "../../modules/axalloc"}
elf = { path = "../../../elf" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
