[package]
name = "arceos-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
axalloc ={ path = "../../modules/axalloc"}
axconfig = { path = "../../modules/axconfig" }
axlibc ={ path = "../../ulib/axlibc" }
axhal ={ path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog" }
axstd = { path = "../../ulib/axstd", features = ["alloc", "multitask", "paging", "irq", "sched_rr"], optional = true }
axtask ={ path = "../../modules/axtask" }
elf = { path = "../../../elf" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
